Add Webcam Image Classification

--- a/.p5rc
+++ b/.p5rc
@@ -1,6 +1,7 @@
 {
   "name": "p5",
   "projects": [
-    "image-classification"
+    "image-classification",
+    "webcam-image-classification"
   ]
 }
