--- a/.p5rc
+++ b/.p5rc
@@ -2,6 +2,7 @@
   "name": "p5",
   "projects": [
     "image-classification",
-    "webcam-image-classification"
+    "webcam-image-classification",
+    "feature-extractor-classification"
   ]
 }
